<resources>
    <string name="app_name">MovieTicketsApp</string>
    <string name="GOOGLE_MAPS_API_KEY">AIzaSyDSFcTdcxxcBhxRAfrxcdnYhkqIPNoYqgA</string>
    <string name="THEMOVIEDB_API_KEY">f9ff8fb064599817d1e3023214924caa</string>
    <string name="logo">LOGO</string>
    <string name="get_started">Get Started</string>
    <string name="tiltle">Movie Recommendations Just for you</string>
    <string name="introduce">Your personal movie guide awaits. Discover tailored recommendations based on your taste. Get ready for movie magic.</string>
    <string name="cineapp">Cineapp</string>
    <string name="text_login">Let`s dive into your account</string>
    <string name="title_login">Sign in with password</string>
    <string name="tiltle_sign_in">Please enter your email and password to sign in</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome_back">Welcome back</string>
    <string name="password">Password</string>">
    <string name="email">Email</string>">
    <string name="title_reset_password">Reset your password</string>">
    <string name="title_continue">Continue</string>">
    <string name="conten_reset_password">Please enter your email and we will send you an OTP code in the step to reset your password.</string>
    <string name="opt_code">OTP code verification</string>
    <string name="contet_otp">We have sent an OTP code to your email. Enter the OTP code below to reset password.</string>
    <string name="new_password">New password</string>
    <string name="cf_new_password">New password</string>
    <string name="resend">Resend OTP</string>
    <string name="notify_otp">Didn\'t receive the OTP</string>
    <string name="content_screen_create">Create your new password if you forgot it, then you have to do forgot password</string>
    <string name="create_new_pass">Create new password</string>
    <string name="new_pass">New password</string>
    <string name="cf_new_pass">Confirm new password</string>
    <string name="create_account">Create account</string>
    <string name="content_create_account">Sign up to lock a world of movies and seamless ticket booking.</string>
    <string name="ready_account">Are you ready have an account?</string>
    <string name="agree">I agree to Cineapp</string>
    <string name="condition">Terms of Conditions.</string>
    <string name="sign_up">Sign up</string>
    <string name="complete">Complete Your Profile</string>
    <string name="content_complete">Add the finishing touches to your profile. Let`s make your movie experience more social!</string>
    <string name="full_name">Full name</string>
    <string name="phone_number">Phone number</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="finish">Finish</string>
    <string name="let_s_start">Let\'s Start Watching</string>
    <string name="success_image">Success Image</string>
    <string name="content_success">Start exploring the latest movies, showtimes, and ticket options</string>
    <string name="u_all_set">You\'re All Set!</string>
    <string name="don_t_have_an_account">Don`t have an account?</string>
    <string name="ins">Continue with Instagram</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_apple">Continue with Apple</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="resetpass">Reset Password</string>
    <string name="reset_password_success">Reset password success</string>
    <string name="successful">Successful!</string>
    <string name="please_wait">Please wait...</string>
    <string name="you_will_be_directed_to_the_homepage">You will be directed to the homepage.</string>
    <string name="sign_in_successful">Sign in successful!</string>
    <string name="name_user">Loading...</string>
    <string name="img_back_ground">Img Back Ground</string>
    <string name="now_playing">Now Playing</string>
    <string name="view_all">view all</string>
    <string name="movie">movie</string>
    <string name="book_now">Book Now</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="duration">Duration</string>
    <string name="director">Director</string>
    <string name="gener">Gener</string>
    <string name="space">:</string>
    <string name="watch_trailer">Watch Trailer</string>
    <string name="synopsis">Synopsis</string>
    <string name="videos">Videos</string>
    <string name="cast">Cast</string>
    <string name="photos">Photos</string>
    <string name="back">back</string>
    <string name="choose_seat_s">Choose Seat(s)</string>
    <string name="available">Available</string>
    <string name="unavailable">Unavailable</string>
    <string name="selected">selected</string>
    <string name="_0">0$</string>
    <string name="_0_seat_selected">0 Seat Selected</string>
    <string name="line">-</string>
    <string name="dash_line_black">dash line black</string>
    <string name="time">time</string>
    <string name="amc_empire_25">AMC Empire 25</string>
    <string name="_12_00">($12.00)</string>
    <string name="review_summary">Review Summary</string>
    <string name="cinema">Cinema</string>
    <string name="seat_s">Seat(s)</string>
    <string name="date">Date</string>
    <string name="hours">Hours</string>
    <string name="price_details">Price Details</string>
    <string name="standard">Standard</string>
    <string name="conversion_free">Conversion Free</string>
    <string name="actual_pay">Actual Pay</string>
    <string name="continue_payment">Continue to Payment</string>
    <string name="pay">Pay</string>
    <string name="payment">Payment</string>
    <string name="cancel">Cancel</string>
    <string name="dola">$0</string>
    <string name="food_delivery_date">Food delivery date</string>
    <string name="reduce">-</string>
    <string name="increase">+</string>
    <string name="received_at">Received at</string>
    <string name="food_order">Food Order</string>
    <string name="_1">1</string>
    <string name="oops_something_went_wrong">Oops something went wrong!!!</string>
    <string name="ba_cham">...</string>
    <string name="arrow">Arrow</string>
    <string name="note">Note:</string>
    <string name="recipient_information">Recipient Information</string>
    <string name="order_details">Order Details</string>
    <string name="provisional_total">Provisional Total</string>
    <string name="poster">Poster</string>
    <string name="scan_vietqr_code_to_pay">Scan VietQR code to pay</string>
    <string name="movie_detail">Movie Detail</string>
    <string name="update_profile">Update Profile</string>
    <string name="content_update_profile">Update your personal information</string>
    <string name="update">Update</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Best_Movie">Best Movie</string>
    <string-array name="statistic_filter_options">
        <item>Thống kê theo ngày</item>
        <item>Thống kê theo tháng</item>
        <item>Thống kê theo phim</item>
        <item>Người mua nhiều nhất</item>
    </string-array>
</resources>