<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    xmlns:add="http://schemas.android.com/tools"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="47dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="161dp"
        android:backgroundTint="@color/primaryBox"
        android:elevation="5dp"
        add:cardCornerRadius="40dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="top|center"
                android:layout_marginTop="50dp"
                android:contentDescription="@string/reset_password_success"
                android:src="@drawable/border_lock_icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/sign_in_successful"
                android:textAlignment="center"
                android:textColor="@color/primaryOrange"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/please_wait"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/you_will_be_directed_to_the_homepage"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <ProgressBar
                android:id="@+id/prgWait"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:indeterminateTint="@color/primaryOrange" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>