<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryGray">

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="48dp">

                <ImageView
                    android:id="@+id/imgBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/back"
                    android:src="@drawable/baseline_arrow_back_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/choose_seat_s"
                    android:textColor="@color/white"
                    android:textSize="19sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imgBack"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imgMap"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_marginHorizontal="20dp"
                android:contentDescription="@string/movie"
                android:src="@drawable/dia_dao1"
                app:shapeAppearanceOverlay="@style/RoundedMap" />

            <com.example.movieticketsapp.custom_view.CustomCalendarEditText
                android:id="@+id/edtDateOfBirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/style_edittext"
                android:drawableRight="@drawable/baseline_calendar_month_24"
                android:drawablePadding="20dp"
                android:ems="10"
                android:layout_marginHorizontal="20dp"
                android:hint="@string/food_delivery_date"
                android:inputType="datetime"
                android:padding="15dp"
                android:textColorHint="#9E9F9F"
               />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvFood"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>